--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
+    <button id="squareBtn">How many squares?</button>
     <div id="container"></div>
     <script src="script.js"></script>
   </body>
