updated button text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <button id="squareBtn">How many squares?</button>
+    <button id="squareBtn">Click to select grid size</button>
     <div id="container"></div>
     <script src="script.js"></script>
   </body>
