Add functions to erase and clear drawing grid

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   </head>
   <body>
     <button id="squareBtn">Click to select grid size</button>
+    <div id="draw-erase">
+      <button id="draw">Draw</button>
+      <button id="erase">Eraser</button>
+      <button id="clear">Clear</button>
+    </div>
     <div id="container"></div>
     <script src="script.js"></script>
   </body>
